Polish contribution and related code