@@ -16,10 +16,9 @@
 
 package org.springframework.web.reactive.resource;
 
-import java.nio.charset.StandardCharsets;
-import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -29,11 +28,11 @@ import reactor.test.StepVerifier;
 
 import org.springframework.core.io.ClassPathResource;
 import org.springframework.core.io.Resource;
-import org.springframework.util.StringUtils;
 import org.springframework.web.reactive.resource.EncodedResourceResolver.EncodedResource;
 import org.springframework.web.reactive.resource.GzipSupport.GzippedFiles;
 import org.springframework.web.testfixture.server.MockServerWebExchange;
 
+import static java.nio.charset.StandardCharsets.UTF_8;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.springframework.web.testfixture.http.server.reactive.MockServerHttpRequest.get;
 
@@ -44,18 +43,16 @@ import static org.springframework.web.testfixture.http.server.reactive.MockServe
  * @author Sam Brannen
  */
 @ExtendWith(GzipSupport.class)
-public class CssLinkResourceTransformerTests {
+class CssLinkResourceTransformerTests {
 
 	private ResourceTransformerChain transformerChain;
 
 
 	@BeforeEach
-	public void setup() {
+	void setup() {
 		VersionResourceResolver versionResolver = new VersionResourceResolver();
 		versionResolver.setStrategyMap(Collections.singletonMap("/**", new ContentVersionStrategy()));
-		List<ResourceResolver> resolvers = new ArrayList<>();
-		resolvers.add(versionResolver);
-		resolvers.add(new PathResourceResolver());
+		List<ResourceResolver> resolvers = List.of(versionResolver, new PathResourceResolver());
 
 		CssLinkResourceTransformer cssLinkTransformer = new CssLinkResourceTransformer();
 		cssLinkTransformer.setResourceUrlProvider(createUrlProvider(resolvers));
@@ -66,18 +63,17 @@ public class CssLinkResourceTransformerTests {
 
 	private ResourceUrlProvider createUrlProvider(List<ResourceResolver> resolvers) {
 		ResourceWebHandler handler = new ResourceWebHandler();
-		handler.setLocations(Collections.singletonList(new ClassPathResource("test/", getClass())));
+		handler.setLocations(List.of(new ClassPathResource("test/", getClass())));
 		handler.setResourceResolvers(resolvers);
 
 		ResourceUrlProvider urlProvider = new ResourceUrlProvider();
-		urlProvider.registerHandlers(Collections.singletonMap("/static/**", handler));
+		urlProvider.registerHandlers(Map.of("/static/**", handler));
 		return urlProvider;
 	}
 
 
 	@Test
-	public void transform() {
-
+	void transform() {
 		MockServerWebExchange exchange = MockServerWebExchange.from(get("/static/main.css"));
 		Resource css = getResource("main.css");
 		String expected = """
@@ -95,16 +91,15 @@ public class CssLinkResourceTransformerTests {
 		StepVerifier.create(this.transformerChain.transform(exchange, css)
 				.cast(TransformedResource.class))
 				.consumeNextWith(transformedResource -> {
-					String result = new String(transformedResource.getByteArray(), StandardCharsets.UTF_8);
-					result = StringUtils.deleteAny(result, "\r");
-					assertThat(result).isEqualTo(expected);
+					String result = new String(transformedResource.getByteArray(), UTF_8);
+					assertThat(result).isEqualToNormalizingNewlines(expected);
 				})
 				.expectComplete()
 				.verify();
 	}
 
 	@Test
-	public void transformNoLinks() {
+	void transformNoLinks() {
 		MockServerWebExchange exchange = MockServerWebExchange.from(get("/static/foo.css"));
 		Resource expected = getResource("foo.css");
 
@@ -114,7 +109,7 @@ public class CssLinkResourceTransformerTests {
 	}
 
 	@Test
-	public void transformExtLinksNotAllowed() {
+	void transformExtLinksNotAllowed() {
 		MockServerWebExchange exchange = MockServerWebExchange.from(get("/static/external.css"));
 
 		List<ResourceTransformer> transformers = Collections.singletonList(new CssLinkResourceTransformer());
@@ -130,9 +125,8 @@ public class CssLinkResourceTransformerTests {
 		StepVerifier.create(chain.transform(exchange, resource)
 				.cast(TransformedResource.class))
 				.consumeNextWith(transformedResource -> {
-					String result = new String(transformedResource.getByteArray(), StandardCharsets.UTF_8);
-					result = StringUtils.deleteAny(result, "\r");
-					assertThat(result).isEqualTo(expected);
+					String result = new String(transformedResource.getByteArray(), UTF_8);
+					assertThat(result).isEqualToNormalizingNewlines(expected);
 				})
 				.expectComplete()
 				.verify();
@@ -144,7 +138,7 @@ public class CssLinkResourceTransformerTests {
 	}
 
 	@Test
-	public void transformSkippedForNonCssResource() {
+	void transformSkippedForNonCssResource() {
 		MockServerWebExchange exchange = MockServerWebExchange.from(get("/static/images/image.png"));
 		Resource expected = getResource("images/image.png");
 
@@ -155,7 +149,7 @@ public class CssLinkResourceTransformerTests {
 	}
 
 	@Test
-	public void transformSkippedForGzippedResource(GzippedFiles gzippedFiles) throws Exception {
+	void transformSkippedForGzippedResource(GzippedFiles gzippedFiles) throws Exception {
 		gzippedFiles.create("main.css");
 
 		MockServerWebExchange exchange = MockServerWebExchange.from(get("/static/main.css"));
@@ -169,20 +163,19 @@ public class CssLinkResourceTransformerTests {
 	}
 
 	@Test // https://github.com/spring-projects/spring-framework/issues/22602
-	public void transformEmptyUrlFunction() throws Exception {
+	void transformEmptyUrlFunction() throws Exception {
 		MockServerWebExchange exchange = MockServerWebExchange.from(get("/static/empty_url_function.css"));
 		Resource css = getResource("empty_url_function.css");
 		String expected = """
 						.fooStyle {
-						\tbackground: transparent url() no-repeat left top;
+							background: transparent url() no-repeat left top;
 						}""";
 
 		StepVerifier.create(this.transformerChain.transform(exchange, css)
 				.cast(TransformedResource.class))
 				.consumeNextWith(transformedResource -> {
-					String result = new String(transformedResource.getByteArray(), StandardCharsets.UTF_8);
-					result = StringUtils.deleteAny(result, "\r");
-					assertThat(result).isEqualTo(expected);
+					String result = new String(transformedResource.getByteArray(), UTF_8);
+					assertThat(result).isEqualToNormalizingNewlines(expected);
 				})
 				.expectComplete()
 				.verify();
